refactor: PDS 상담그룹설정 리팩토링
- 상담그룹 추가/수정 모달 합치기
- PDS 큐 분배정책 enum 오류 수정
- 미사용 api controller 메서드 제거